file(GLOB HEADERS "include/surf/delayed_node/*.hpp")

add_library( surf_delayed_node
             delayed_node_plugin.cpp
           )

target_link_libraries( surf_delayed_node surf_chain surf_protocol surf_app )
target_include_directories( surf_delayed_node
                            PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )

if(MSVC)
  set_source_files_properties( delayed_node_plugin.cpp PROPERTIES COMPILE_FLAGS "/bigobj" )
endif(MSVC)

install( TARGETS
   surf_delayed_node

   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
)
